# lilith-gmail

./: .env.example  .gitignore  Dockerfile  README.md  capabilities.json  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: a5b6c7d8e9f0_drop_sanitized_body.py  ba0926d0ae32_initial_schema.py  d1913354133b_upgrade_to_multi_embed_768.py  e2a346f5b7c4_add_transform_completed_at.py  f4a1b2c3d4e5_add_body_redacted.py  g5b6c7d8e9f1_add_snippet_redacted.py  h6c7d8e9f2a3_add_account_labels.py  i7d8e9f3b4c5_add_fulltext_search.py
prompts/: README.md  classification_system.md  classification_user.md
src/core/: README.md  __init__.py  capabilities.py  capabilities_loader.py  config.py  database.py  email_utils.py  embeddings.py  models.py  preprocessing.py  privacy.py
src/daemon/: app.py
src/mcp_server/: __main__.py  email_search.py  external_format.py  hybrid_search.py  server.py  summarization.py  tools.py
src/sync/: __init__.py  gmail_client.py  oauth_helpers.py  sync_workers.py
src/transform/: __init__.py  chunking.py  fasttext_client.py  pipeline.py  privacy.py  prompt_loader.py  spacy_client.py  tui.py  vllm_client.py
